--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,8 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: make
+script:
+  - make
+
+after_success:
+  - codecov
