--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,10 @@ python:
 
 install:
   - "pip install -r requirements.txt"
-  - "pip install pytest-cov"
 
 script:
   - "make"
-  - "py.test --cov=./"
+  - "py.test --cov=./tests"
 
 after_success:
   - codecov
